# BEAM

./: .gitignore  README.md  app.py  feature_search.py  main.py  preprocessing.py  pyproject.toml  test.ipynb  train_specific_model.py
CTGAN/: generate_data.ipynb  generate_data.py  model_trainer.ipynb  train_ctgan.py
CTGAN/CTGAN_models/: ctgan_model_deep_model.pkl  ctgan_model_high_lr.pkl  ctgan_model_small_model.pkl  nohup.out  quality_reports.csv
CTGAN/models/: ctgan_model_large_model.joblib  quality_reports.csv
ModelScripts/: LogisticRegression.ipynb  Model_analysis.ipynb  RandomForest.ipynb  XGBoost.ipynb  clinical_preprocess.ipynb  feature_search.ipynb  logistic_regression.py  random_forest.py  xgboost_search.py
data/: synthetic_data.csv
models/: feature_importance.csv  test_dataset.csv
scripts/: comprehensive_feature_search.py  comprehensive_feature_search_INSCD_SCD.py  comprehensive_feature_search_NC_SCD.py  feature_search.ipynb  feature_search.py
scripts/CTGAN/: README.md  ctgan_model_baseline.joblib  generate_data.py  model_trainer.ipynb  train_ctgan.py
scripts/CTGAN/CTGAN_models/: ctgan_model_baseline.pkl  ctgan_model_large_batch.pkl  ctgan_model_large_model.pkl  metadata.json  quality_reports.csv
scripts/CTGAN/models/: ctgan_model_deep_model.joblib  ctgan_model_high_lr.joblib  ctgan_model_large_batch.joblib  ctgan_model_small_model.joblib  metadata.json
scripts/results/: LogisticRegression.xlsx  RandomForest.xlsx
templates/: index.html
utils/: __init__.py  data_preprocessing.py  feature_search.py
